# admin-template

./: .env  .gitignore  Caddyfile  Makefile  README.md  deploy.sh  docker-compose.bd.yml  docker-compose.prod.network.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: prod.yml
back/: .dev.env  .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.bd.yml
back/migrations/: 20240118232455_init.down.sql  20240118232455_init.up.sql
back/src/: config.rs  db.rs  errors.rs  main.rs  swager.rs
back/src/database/: articles.rs  mod.rs  projects.rs  users.rs
back/src/dtos/: articles.rs  common.rs  files.rs  mod.rs  projects.rs  users.rs
back/src/extractors/: auth.rs  authentication_token.rs  mod.rs
back/src/handlers/: articles_scope.rs  auth_scope.rs  files_scope.rs  healthchecker.rs  mod.rs  projects_scope.rs  users_scope.rs
back/src/handlers/articles/: create.rs  get_all.rs  get_one.rs  remove.rs  update.rs
back/src/handlers/auth/: login.rs  logout.rs  register.rs
back/src/handlers/files/: get_file.rs  mod.rs  remove_file.rs  upload_file.rs
back/src/handlers/projects/: create.rs  get_all.rs  get_one.rs  mod.rs  remove.rs  update.rs
back/src/handlers/users/: all.rs  auth_user.rs  change_pass.rs  change_role.rs  get_user.rs  mod.rs  remove_user.rs
back/src/models/: article.rs  file.rs  mod.rs  project.rs  user.rs
back/src/utils/: admin.rs  file_name.rs  mod.rs  password.rs  token.rs
front/: .env  Dockerfile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
front/src/: main.tsx
front/src/api/: index.ts
front/src/components/: AuthContext.tsx  Cover.tsx  FilterTags.tsx  FormInput.tsx  Header.tsx  ImageUpload.tsx  ListPagination.tsx  LoadingButton.tsx  Spinner.tsx  TagsInput.tsx
front/src/layouts/: MainLayout.tsx
front/src/pages/: ErrorPage.tsx  ProfilePage.tsx
front/src/router/: ProtectedRoute.tsx  auth.tsx  index.tsx  user.tsx
front/src/schemas/: articleSchema.ts  imageSchema.ts  loginSchema.ts  passwordSchema.ts  projectSchema.ts  registerSchema.ts
front/src/store/: article.ts  auth.ts  index.ts  project.ts  user.ts
nginx/: nginx.conf
(+26 files in other folders)
